--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@ other file types will be ignored<br>
 	</div>
 	
 	
-<core-toolbar class="main_toolbar">
+<core-toolbar class="main_toolbar compact"><div class="fit">
 	<core-tooltip label="help on GitHub" position="right">					
 	<core-icon-button icon="flip-to-front" class="github_button"></core-icon-button>
 	</core-tooltip>
 	
-	<core-tooltip label="keyboard shortcuts">					
+	<core-tooltip label="keyboard shortcuts [?]">					
 	<core-icon-button icon="list" class="shortcuts_button"></core-icon-button>
 	</core-tooltip>
 	
@@ -180,8 +180,7 @@ other file types will be ignored<br>
 		<div class="button display_button">tc</div>
 	</core-tooltip>
 
-
-</core-toolbar>
+</div></core-toolbar>
 
 <div  flex horizontal layout>
 
