copy group to clipboard

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@ other file types will be ignored<br>
 </div>
 </div>
 
+<div class="hidden_clipboard"></div>
+
 <div class="floating_layer">
 
 	<div class="floatinginfo autocut_info">
