info summary showing times

--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@ other file types will be ignored<br>
 				<canvas id="posplot" class='poslayer' width="200" height="200"></canvas> 
 				<canvas id="posoverlay" class='poslayer' width="200" height="200"></canvas> 
 			</div>
+			<div class="info_summary"></div>
 		</div>
 
 		<core-splitter direction="up"></core-splitter>
