--- a/index.html
+++ b/index.html
@@ -252,7 +252,11 @@ other file types will be ignored<br>
 				<canvas id="posplot" class='poslayer' width="200" height="200"></canvas> 
 				<canvas id="posoverlay" class='poslayer' width="200" height="200"></canvas> 
 			</div>
-			<div class="info_summary"></div>
+			<div class="info_summary">
+				<div class="info_summary_text"></div>
+				<canvas id="speedhist" width="50" height= "84"></canvas>
+				<div id="speedhist_labels" style="display:inline;position:relative;"><div style="position:absolute;right:0px;color:#888;font-size:8px;bottom:-2px;">60&nbsp;cm/s</div></div>
+			</div>
 		</div>
 
 		<core-splitter direction="up"></core-splitter>
