T.EEG.PlotSpect initial playing

--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@ other file types will be ignored<br>
 				<div class="info_summary_text"></div>
 				<canvas id="speedhist" width="50" height= "84"></canvas>
 				<div id="speedhist_labels" style="display:inline;position:relative;"><div style="position:absolute;right:0px;color:#888;font-size:8px;bottom:-2px;">60&nbsp;cm/s</div></div>
+				<canvas id="eegspect" width="50" height= "84"></canvas>
 			</div>
 		</div>
 
@@ -309,6 +310,7 @@ other file types will be ignored<br>
 <script src="Mlib.js"></script>
 <!--<script src="webgl-debug.js"></script> -->
 <script src="gpu-distmatrix.js"></script>
+<script src="eeg.js"></script>
 
 <!-- T.PAR, T.CUT, and T.ORG look after the files and cuts-->
 <script src="parsefiles.js"></script>
