Sort of proper eeg loading and plotting
splits eeg data into chunks and shows mean power spectra  over all
chunks.  Doesn't do any checks on eeg header before using it and doesn't
display eeg file in file info pane.

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@ other file types will be ignored<br>
 					<div class="file_info_title" id="tet_info" style="display:none;"></div>
 					<div class="file_info_title" id="cut_info" style="display:none;"></div>
 					<div class="file_info_title" id="pos_info" style="display:none;"></div>
+					<div class="file_info_title" id="eeg_info" style="display:none;"></div>
 					<div class="file_info_title" id="set_info" style="display:none;"></div>
 				</div>
 			</div>
@@ -310,7 +311,6 @@ other file types will be ignored<br>
 <script src="Mlib.js"></script>
 <!--<script src="webgl-debug.js"></script> -->
 <script src="gpu-distmatrix.js"></script>
-<script src="eeg.js"></script>
 
 <!-- T.PAR, T.CUT, and T.ORG look after the files and cuts-->
 <script src="parsefiles.js"></script>
@@ -326,6 +326,7 @@ other file types will be ignored<br>
 <script src="temporalcorr.js"></script>
 <script src="cluster-plot.js"></script>
 <script src="webgl-waveforms.js"></script>
+<script src="eeg.js"></script>
 
 <!-- T.AC does autocutting, uses tree.js to display hierarchy -->
 <script src="tree.js"></script>
