improve - drop zone prettier and returns later

--- a/index.html
+++ b/index.html
@@ -17,19 +17,6 @@
 <body>
 <core-iconset id="meta"></core-iconset>
 
-<div class="file_drop">
-<div id="filestem_caption"></div>
-<div class="file_drop_text">drop one or more of the following data files here: 
-<b><br>set | pos | tet | cut | clu</b><br>
-you can drag further files onto the window at any point<br>
-other file types will be ignored<br>
-<button class="github_button" style="position: relative; top: 20px;">Go to quickstart guide on GitHub</button>
-</div>
-<div id="works_with_chrome">Tested with Chrome <img src="chromelogo.png" width="15px"/></div>
-<div id="filesystem_buttons"> <button id="filesystem_button">turn on FileAPIs</button>
-<button id="filesystem_load_button" style="display: none;">use existing files</button>
-</div>
-</div>
 
 <div class="hidden_clipboard"></div>
 
@@ -297,9 +284,24 @@ other file types will be ignored<br>
 
 
 
-
-
 <core-icon-button icon="menu" class="menu_toggle"></core-icon-button>
+
+
+<div class="file_drop">
+<div id="filestem_caption"></div>
+<div class="file_drop_text"><div class="drop_banner">drag &amp; drop files here</div>
+the following types of data files are recognised: 
+<b><br>set | pos | tet | cut | clu</b><br>
+you can drag further files onto the window at any point<br>
+other file types will be ignored<br>
+<div class="github_button github_button_filedrop">Go to <b>quickstart guide</b> on GitHub</div>
+</div>
+<div id="works_with_chrome">Tested with Chrome <img src="chromelogo.png" width="15px"/></div>
+<div id="filesystem_buttons"> <button id="filesystem_button">turn on FileAPIs</button>
+<button id="filesystem_load_button" style="display: none;">use existing files</button>
+</div>
+</div>
+
 
 <!-- public libraries and generic stuff for this app -->
 <script src="jquery.min.js"></script>  
