--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link rel="import" href="polymer/core-icon-button.html">
 <link rel="import" href="polymer/core-toolbar.html">
 <link rel="import" href="polymer/paper-slider.html">
+<link rel="import" href="tile-element.html">
 </head>
 
 <body>
@@ -89,6 +90,20 @@
 			<paper-slider class="nodrag" id="rm_smoothing_slider" pin snaps min="0" max="5" step="1" value="2" style='width:300px;'></paper-slider><br>
 		</div>
 	</div>
+	
+	<div class="floatinginfo dir_info">
+		<div class='floating_title'>Directional ratemap [Q]</div>
+		<div class='floating_body'>
+			Bin size <span id='dir_binsize_val' class="slider_val">6 degrees</span><br>
+			WARNING: directional plots are still in alpha testing (unlike everything else which is just about in beta!).
+			<!--<paper-slider class="nodrag" id="rm_binsize_slider" pin snaps min="0.5" max="10" step="0.5" value="2.5" style='width:300px'></paper-slider>
+			<br><br>
+			Smoothing kernel boxcar <span id='rm_smoothing_val' class="slider_val">(2x?+1) by (2x?+1) bins</span><br>
+			<paper-slider class="nodrag" id="rm_smoothing_slider" pin snaps min="0" max="5" step="1" value="2" style='width:300px;'></paper-slider><br>
+			-->
+		</div>
+	</div>
+	
 	
 	<div class="floatinginfo tc_info">
 			<div class='floating_title'>Temporal auto correlation [t]</div>
@@ -213,6 +228,9 @@
 	</core-tooltip>
 	<core-tooltip label="spatial ratemap [r]">
 		<div class="button display_button info_linked" data-info-name='rm_info'>rm</div>
+	</core-tooltip>
+	<core-tooltip label="directional ratemap [Q]">
+		<div class="button display_button info_linked" data-info-name='dir_info'>dir</div>
 	</core-tooltip>
 	<core-tooltip label="temporal autocorrelation [t]">
 		<div class="button display_button info_linked" data-info-name='tc_info'>tc</div>
