--- a/tile-element.html
+++ b/tile-element.html
@@ -427,9 +427,8 @@ I'm not quite sure why it's so complciated, it would probably be better to just 
 			var oldCanvs = this.shadowRoot.getElementsByTagName('canvas');
 			for(var i = 0;i<oldCanvs.length;i++){
 				var img = document.createElement('img');
-				var props = getComputedStyle(oldCanvs[i])
-				img.setAttribute('width',props.width); //this allows us to put the 'px' which makes a difference to google docs though not to gmail for some reason.
-				img.setAttribute('height',props.height); 
+				img.setAttribute('width',oldCanvs[i].style.width); //this allows us to put the 'px' which makes a difference to google docs though not to gmail for some reason.
+				img.setAttribute('height',oldCanvs[i].style.height); 
 				img.src = oldCanvs[i].toDataURL();
 				div.appendChild(img);
 			}
