--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <link rel="import" href="polymer/core-toolbar.html">
 <link rel="import" href="polymer/paper-slider.html">
 <link rel="import" href="tile-element.html">
+<link rel="import" href="cross-hair.html">
 </head>
 
 <body>
@@ -280,7 +281,9 @@
 					<div class="cluster_others">
 					</div>
 				</div>
-			<div id="cluster_panel" class="scrollable_area grabbable" flex></div>
+			<div id="cluster_panel" class="scrollable_area grabbable" flex>
+			<cross-hair id='cluster_crosshair' showBars=0></cross-hair>
+			</div>
 		</div>
 	
 	</div>
